// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`SNAPSHOT Tests 1`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "next": [
          {
            "type": "Invocation",
            "value": {
              "type": "Identifier",
              "value": "test",
            },
          },
        ],
        "type": "Singular",
        "value": {
          "type": "Invocation",
          "value": {
            "type": "This",
          },
        },
      },
    },
    "operator": "+",
    "right": {
      "type": "Expression",
      "value": {
        "next": [
          {
            "type": "Invocation",
            "value": {
              "type": "Identifier",
              "value": "test2",
            },
          },
        ],
        "type": "Singular",
        "value": {
          "type": "Invocation",
          "value": {
            "type": "This",
          },
        },
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 2`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "next": [
              {
                "type": "Invocation",
                "value": {
                  "type": "Identifier",
                  "value": "test",
                },
              },
            ],
            "type": "Singular",
            "value": {
              "type": "Invocation",
              "value": {
                "type": "This",
              },
            },
          },
        },
        "operator": "+",
        "right": {
          "type": "Expression",
          "value": {
            "next": [
              {
                "type": "Invocation",
                "value": {
                  "type": "Identifier",
                  "value": "test2",
                },
              },
            ],
            "type": "Singular",
            "value": {
              "type": "Invocation",
              "value": {
                "type": "This",
              },
            },
          },
        },
        "type": "Operation",
      },
    },
    "operator": "-",
    "right": {
      "type": "Expression",
      "value": {
        "type": "Singular",
        "value": {
          "type": "Literal",
          "value": 14,
        },
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 3`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "left": {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Expression",
                  "value": {
                    "left": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Literal",
                          "value": 45,
                        },
                      },
                    },
                    "operator": "<",
                    "right": {
                      "type": "Expression",
                      "value": {
                        "left": {
                          "type": "Expression",
                          "value": {
                            "left": {
                              "type": "Expression",
                              "value": {
                                "left": {
                                  "type": "Expression",
                                  "value": {
                                    "next": [
                                      {
                                        "type": "Invocation",
                                        "value": {
                                          "type": "Identifier",
                                          "value": "test",
                                        },
                                      },
                                      {
                                        "type": "Invocation",
                                        "value": {
                                          "type": "Identifier",
                                          "value": "that",
                                        },
                                      },
                                    ],
                                    "type": "Singular",
                                    "value": {
                                      "type": "Invocation",
                                      "value": {
                                        "type": "This",
                                      },
                                    },
                                  },
                                },
                                "operator": "*",
                                "right": {
                                  "type": "Expression",
                                  "value": {
                                    "next": [
                                      {
                                        "type": "Invocation",
                                        "value": {
                                          "type": "Identifier",
                                          "value": "test2",
                                        },
                                      },
                                    ],
                                    "type": "Singular",
                                    "value": {
                                      "type": "Invocation",
                                      "value": {
                                        "type": "This",
                                      },
                                    },
                                  },
                                },
                                "type": "Operation",
                              },
                            },
                            "operator": "/",
                            "right": {
                              "type": "Expression",
                              "value": {
                                "type": "Singular",
                                "value": {
                                  "type": "Literal",
                                  "value": 14,
                                },
                              },
                            },
                            "type": "Operation",
                          },
                        },
                        "operator": "|",
                        "right": {
                          "type": "Expression",
                          "value": {
                            "type": "Singular",
                            "value": {
                              "type": "Literal",
                              "value": "test",
                            },
                          },
                        },
                        "type": "Operation",
                      },
                    },
                    "type": "Operation",
                  },
                },
                "operator": "in",
                "right": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Literal",
                      "value": "hello",
                    },
                  },
                },
                "type": "Operation",
              },
            },
            "operator": "and",
            "right": {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Invocation",
                      "value": {
                        "type": "Identifier",
                        "value": "x",
                      },
                    },
                  },
                },
                "operator": "!=",
                "right": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Literal",
                      "value": 12,
                    },
                  },
                },
                "type": "Operation",
              },
            },
            "type": "Operation",
          },
        },
        "operator": "and",
        "right": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": 45,
            },
          },
        },
        "type": "Operation",
      },
    },
    "operator": "implies",
    "right": {
      "type": "Expression",
      "value": {
        "type": "Singular",
        "value": {
          "type": "Literal",
          "value": 23,
        },
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 4`] = `
{
  "type": "Expression",
  "value": {
    "next": [
      {
        "type": "Invocation",
        "value": {
          "type": "Identifier",
          "value": "HELLO-WORLD IDENTIFIER",
        },
      },
      {
        "type": "Invocation",
        "value": {
          "type": "Identifier",
          "value": "deliniated",
        },
      },
      {
        "type": "Invocation",
        "value": {
          "type": "Identifier",
          "value": "strange-synt",
        },
      },
    ],
    "type": "Singular",
    "value": {
      "type": "Invocation",
      "value": {
        "type": "Identifier",
        "value": "test",
      },
    },
  },
}
`;

exports[`SNAPSHOT Tests 5`] = `
{
  "type": "Expression",
  "value": {
    "next": [
      {
        "type": "Invocation",
        "value": {
          "type": "Identifier",
          "value": "test",
        },
      },
      {
        "type": "Invocation",
        "value": {
          "next": [
            {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Expression",
                  "value": {
                    "left": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Invocation",
                          "value": {
                            "type": "Identifier",
                            "value": "value",
                          },
                        },
                      },
                    },
                    "operator": "!=",
                    "right": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Literal",
                          "value": "test",
                        },
                      },
                    },
                    "type": "Operation",
                  },
                },
                "operator": "and",
                "right": {
                  "type": "Expression",
                  "value": {
                    "left": {
                      "type": "Expression",
                      "value": {
                        "left": {
                          "type": "Expression",
                          "value": {
                            "type": "Singular",
                            "value": {
                              "type": "Invocation",
                              "value": {
                                "type": "Identifier",
                                "value": "value",
                              },
                            },
                          },
                        },
                        "operator": "/",
                        "right": {
                          "type": "Expression",
                          "value": {
                            "type": "Singular",
                            "value": {
                              "type": "Literal",
                              "value": 11,
                            },
                          },
                        },
                        "type": "Operation",
                      },
                    },
                    "operator": "=",
                    "right": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Literal",
                          "value": 12,
                        },
                      },
                    },
                    "type": "Operation",
                  },
                },
                "type": "Operation",
              },
            },
            {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Invocation",
                      "value": {
                        "type": "Index",
                      },
                    },
                  },
                },
                "operator": "!=",
                "right": {
                  "type": "Expression",
                  "value": {
                    "left": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Invocation",
                          "value": {
                            "type": "Total",
                          },
                        },
                      },
                    },
                    "operator": "+",
                    "right": {
                      "type": "Expression",
                      "value": {
                        "type": "Singular",
                        "value": {
                          "type": "Variable",
                          "value": {
                            "type": "Identifier",
                            "value": "testing",
                          },
                        },
                      },
                    },
                    "type": "Operation",
                  },
                },
                "type": "Operation",
              },
            },
          ],
          "type": "Function",
          "value": {
            "type": "Identifier",
            "value": "where",
          },
        },
      },
    ],
    "type": "Singular",
    "value": {
      "type": "Invocation",
      "value": {
        "type": "This",
      },
    },
  },
}
`;

exports[`SNAPSHOT Tests 6`] = `
{
  "type": "Expression",
  "value": {
    "type": "Singular",
    "value": {
      "type": "Literal",
      "value": "testing",
    },
  },
}
`;

exports[`SNAPSHOT Tests 7`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "left": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": true,
                },
              },
            },
            "operator": "!=",
            "right": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": false,
                },
              },
            },
            "type": "Operation",
          },
        },
        "operator": "and",
        "right": {
          "type": "Expression",
          "value": {
            "left": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": "04:00",
                },
              },
            },
            "operator": "=",
            "right": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": "04:00",
                },
              },
            },
            "type": "Operation",
          },
        },
        "type": "Operation",
      },
    },
    "operator": "and",
    "right": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "left": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": "1980-01-01",
                },
              },
            },
            "operator": "!=",
            "right": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": "1980-01-01T00:00:00Z",
                },
              },
            },
            "type": "Operation",
          },
        },
        "operator": "=",
        "right": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": "1980-01-01T00:00:00-05:00",
            },
          },
        },
        "type": "Operation",
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 8`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": 45,
            },
          },
        },
        "operator": "-",
        "right": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": 55.23,
            },
          },
        },
        "type": "Operation",
      },
    },
    "operator": "+",
    "right": {
      "type": "Expression",
      "value": {
        "type": "Singular",
        "value": {
          "type": "Literal",
          "value": 0.23,
        },
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 9`] = `
{
  "type": "Expression",
  "value": {
    "next": [
      {
        "type": "Indexed",
        "value": {
          "type": "Expression",
          "value": {
            "left": {
              "type": "Expression",
              "value": {
                "type": "Singular",
                "value": {
                  "type": "Literal",
                  "value": 45,
                },
              },
            },
            "operator": "+",
            "right": {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Literal",
                      "value": 15,
                    },
                  },
                },
                "operator": "*",
                "right": {
                  "type": "Expression",
                  "value": {
                    "type": "Singular",
                    "value": {
                      "type": "Literal",
                      "value": 3,
                    },
                  },
                },
                "type": "Operation",
              },
            },
            "type": "Operation",
          },
        },
      },
      {
        "type": "Invocation",
        "value": {
          "type": "Identifier",
          "value": "hello",
        },
      },
    ],
    "type": "Singular",
    "value": {
      "type": "Invocation",
      "value": {
        "type": "Identifier",
        "value": "this",
      },
    },
  },
}
`;

exports[`SNAPSHOT Tests 10`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "type": "Expression",
      "value": {
        "next": [
          {
            "type": "Invocation",
            "value": {
              "type": "Identifier",
              "value": "test",
            },
          },
        ],
        "type": "Singular",
        "value": {
          "type": "Invocation",
          "value": {
            "type": "This",
          },
        },
      },
    },
    "operator": "+",
    "right": {
      "type": "Expression",
      "value": {
        "left": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": 2,
            },
          },
        },
        "operator": "*",
        "right": {
          "type": "Expression",
          "value": {
            "type": "Singular",
            "value": {
              "type": "Literal",
              "value": 4,
            },
          },
        },
        "type": "Operation",
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 11`] = `
{
  "type": "Expression",
  "value": {
    "next": [
      {
        "type": "Invocation",
        "value": {
          "next": [],
          "type": "Function",
          "value": {
            "type": "Identifier",
            "value": "anyTrue",
          },
        },
      },
    ],
    "type": "Singular",
    "value": {
      "type": "Literal",
      "value": true,
    },
  },
}
`;
